bugfix: wrong field name in ChatSessionUserMapper.xml